@@ -3,7 +3,7 @@
 	<onload condition="System.HasAddon(script.tv.show.next.aired)">RunScript(script.tv.show.next.aired,backend=True)</onload>
 	<defaultcontrol always="true">50</defaultcontrol>
 	<backgroundcolor>background</backgroundcolor>
-	<views>50,51,52,53,54,55,500,501,502</views>
+	<views>50,51,52,53,54,505,55,500,504,501,502</views>
 	<menucontrol>9000</menucontrol>
 	<controls>
 		<include>DefaultBackground</include>
@@ -18,6 +18,8 @@
 			<include>View_500_Wall</include>
 			<include>View_501_Banner</include>
 			<include>View_502_FanArt</include>
+			<include>View_504_ThumbsWall</include>
+			<include>View_505_ThumbsInfoWall</include>
 			<control type="group">
 				<depth>DepthContentPanel</depth>
 				<include>OpenClose_Left</include>
@@ -28,7 +30,7 @@
 			<control type="group">
 				<depth>DepthContentPanel</depth>
 				<include>OpenClose_Left</include>
-				<visible>Control.IsVisible(50) | Control.Isvisible(54) | [Control.IsVisible(501) + String.IsEqual(Skin.AspectRatio,21:9)]</visible>
+				<visible>Control.IsVisible(50) | Control.Isvisible(54) | Control.Isvisible(505) | [Control.IsVisible(501) + String.IsEqual(Skin.AspectRatio,21:9)]</visible>
 				<include>Visible_Left</include>
 				<top>40</top>
 				<include content="ContentPanel">
@@ -279,7 +281,7 @@
 					<left>117</left>
 					<aspectratio align="center" aligny="center">keep</aspectratio>
 					<texture>$VAR[LibraryClearLogoVar]</texture>
-					<visible>Control.IsVisible(54) | Control.IsVisible(50)</visible>
+					<visible>Control.IsVisible(54) | Control.IsVisible(505) | Control.IsVisible(50)</visible>
 				</control>
 				<control type="image">
 					<top>15</top>
@@ -294,7 +296,7 @@
 			<control type="group">
 				<visible>!Skin.HasSetting(LibrayClearLogo)</visible>
 				<visible>!Container.Scrolling + !Window.IsVisible(DialogVolumeBar.xml)</visible>
-				<visible>Control.IsVisible(500) | Control.IsVisible(501)</visible>
+				<visible>Control.IsVisible(500) | Control.IsVisible(504) | Control.IsVisible(501)</visible>
 				<control type="image">
 					<top>0</top>
 					<width>284</width>
