@@ -1,0 +1,46 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<includes>
+	<include name="View_504_ThumbsWall">
+		<control type="group">
+			<include>OpenClose_Right</include>
+			<left>50</left>
+			<top>0</top>
+			<visible>Control.IsVisible(504)</visible>
+			<include>Visible_Right</include>
+			<control type="panel" id="504">
+				<left>0</left>
+				<top>0</top>
+				<width>98%</width>
+				<height>100%</height>
+				<onleft condition="!Skin.HasSetting(KioskMode)">9000</onleft>
+				<onright>531</onright>
+				<onup condition="Integer.IsGreater(Container.NumPages,1)">504</onup>
+				<onup condition="!Integer.IsGreater(Container.NumPages,1) + !Skin.HasSetting(KioskMode)">9000</onup>
+				<ondown>504</ondown>
+				<viewtype label="40015">icon</viewtype>
+				<preloaditems>2</preloaditems>
+				<pagecontrol>531</pagecontrol>
+				<scrolltime tween="cubic" easing="out">500</scrolltime>
+				<visible>Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows)</visible>
+				<animation effect="slide" end="20,0" time="0" condition="String.IsEqual(Skin.AspectRatio,21:9)">Conditional</animation>
+				<itemlayout height="370" width="600">
+					<control type="group">
+						<top>120</top>
+						<include>InfoWallThumbsLayout</include>
+					</control>
+				</itemlayout>
+				<focusedlayout height="370" width="600">
+					<control type="group">
+						<depth>DepthContentPopout</depth>
+						<animation effect="zoom" start="100" end="110" time="200" tween="sine" easing="inout" center="310,280" condition="!Skin.HasSetting(no_animations)">Focus</animation>
+						<animation effect="zoom" start="110" end="100" time="200" tween="sine" easing="inout" center="310,280" condition="!Skin.HasSetting(no_animations)">UnFocus</animation>
+						<top>120</top>
+						<include content="InfoWallThumbsLayout">
+							<param name="focused" value="true" />
+						</include>
+					</control>
+				</focusedlayout>
+			</control>
+		</control>
+	</include>
+</includes>
